resolves errors for Angular, issue remains in controller

--- a/views/index.html
+++ b/views/index.html
@@ -5,19 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Angular Books App</title>
     <!-- STYLESHEETS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/css/bootstrap.css"></script>
-    <link rel="stylesheet" href="../styles/styles.css">
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/css/bootstrap.css"></script> -->
+    <!-- <link rel="stylesheet" href="../styles/styles.css"> -->
     <!-- VENDOR SCRIPTS -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.min.js"></script>
     <!-- APPLICATION SCRIPTS -->
-    <script src="/scripts/app.js"></script>
-    <script src="/scripts/controllers/BookIndexController.js"></script>
-    <script src="/scripts/controllers/BookShowController.js"></script>
+    <script src="../public/scripts/app.js"></script>
+    <script src="../public/scripts/controllers/BooksIndexController.js"></script>
+    <script src="../public/scripts/controllers/BookShowController.js"></script>
 
 </head>
   <body>
-
+    Angular Books App
+    {{2+2}}
     <div ng-view></div>
 
   </body>
