--- a/views/templates/books.html
+++ b/views/templates/books.html
@@ -1,7 +1,7 @@
-<div class="container">
+<div ng-controller="BooksIndexController as booksIndexCtrl" class="container">
   <div class="row">
     <div class="col-md-8 offset-md-2">
-      <div ng-repeat="book in booksIndexCtlr | orderBy: 'title'" class = "row">
+      <div ng-repeat="book in booksIndexCtrl | orderBy: 'title'" class = "row">
         <ul class="books-list-group">
           <li class="book-list-item">
             <img ng-src={{book.image}}/>
