fixes bus for book list show

--- a/views/index.html
+++ b/views/index.html
@@ -11,14 +11,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.min.js"></script>
     <!-- APPLICATION SCRIPTS -->
-    <script src="../public/scripts/app.js"></script>
-    <script src="../public/scripts/controllers/BooksIndexController.js"></script>
-    <script src="../public/scripts/controllers/BookShowController.js"></script>
+    <script src="/public/scripts/app.js"></script>
+    <script src="/public/scripts/controllers/BooksIndexController.js"></script> 
+    <script src="/public/scripts/controllers/BookShowController.js"></script>
 
 </head>
   <body>
-    Angular Books App
-    {{2+2}}
+    <p>Angular Books App</p>
+    <p>{{2+2}}</p>
     <div ng-view></div>
 
   </body>
