--- a/views/templates/books.html
+++ b/views/templates/books.html
@@ -1,16 +1,17 @@
-<div ng-controller="BooksIndexController as booksIndexCtrl" class="container">
+<div class="container">
+  <h1>Books Index</h1>
   <div class="row">
     <div class="col-md-8 offset-md-2">
-      <div ng-repeat="book in booksIndexCtrl | orderBy: 'title'" class = "row">
+      <div ng-repeat="book in booksIndexCtrl.books | orderBy: 'title'" class = "row">
         <ul class="books-list-group">
           <li class="book-list-item">
-            <img ng-src={{book.image}}/>
+            <img ng-src="{{ book.image }}"/>
             <h2 class="inline-header">Book Title: </h2>
-            <span>{{book.title}}</span>
+            <span>{{ book.title }}</span>
             <h2 class="inline-header">Author: </h2>
-            <span>{{book.author}}</span>
+            <span>{{ book.author }}</span>
             <h4 class="inline-header">Release Date: </h4>
-            <span>{{book.releaseDate}}</span>
+            <span>{{ book.releaseDate }}</span>
           </li>
         </ul>
       </div>
