adds basic styling for vm

--- a/views/templates/books.html
+++ b/views/templates/books.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Books Index</h1>
+  <h2>See All Our Titles</h2>
   <div class="row">
     <div class="col-md-8 offset-md-2">
       <div ng-repeat="book in booksIndexCtrl.books | orderBy: 'title'" class = "row">
