--- a/views/index.html
+++ b/views/index.html
@@ -5,20 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Angular Books App</title>
     <!-- STYLESHEETS -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/css/bootstrap.css"></script> -->
-    <!-- <link rel="stylesheet" href="../styles/styles.css"> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/css/bootstrap.css"></script>
+    <link rel="stylesheet" href="../public/styles/styles.css">
     <!-- VENDOR SCRIPTS -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.min.js"></script>
     <!-- APPLICATION SCRIPTS -->
     <script src="/public/scripts/app.js"></script>
-    <script src="/public/scripts/controllers/BooksIndexController.js"></script> 
+    <script src="/public/scripts/controllers/BooksIndexController.js"></script>
     <script src="/public/scripts/controllers/BookShowController.js"></script>
 
 </head>
   <body>
-    <p>Angular Books App</p>
-    <p>{{2+2}}</p>
+    <div class="jumbotron">
+      <div class="container">
+        <h1>Welcome to the Angular Books App</h1>
+      </div>
+    </div>
+
     <div ng-view></div>
 
   </body>
