--- a/views/templates/books.html
+++ b/views/templates/books.html
@@ -12,6 +12,7 @@
             <span>{{ book.author }}</span>
             <h4 class="inline-header">Release Date: </h4>
             <span>{{ book.releaseDate }}</span>
+            <button type="button" class="btn btn-default" ng-click="bookShowCtrl.book">Book Info</button>
           </li>
         </ul>
       </div>
