--- a/views/templates/book-show.html
+++ b/views/templates/book-show.html
@@ -9,13 +9,13 @@ delete button
   <div class="row">
     <div class="col-md-8 offset-md-2">
           <div class="book-list-item">
-            <img ng-src="{{ book.image }}"/>
+            <img ng-src="{{ bookShowCtrl.book.image }}"/>
             <h2 class="inline-header">Book Title: </h2>
-            <span>{{ book.title }}</span>
+            <span>{{ bookShowCtrl.book.title }}</span>
             <h2 class="inline-header">Author: </h2>
-            <span>{{ book.author }}</span>
+            <span>{{ bookShowCtrl.book.author }}</span>
             <h4 class="inline-header">Release Date: </h4>
-            <span>{{ book.releaseDate }}</span>
+            <span>{{ bookShowCtrl.book.releaseDate }}</span>
           </div>
     </div>
   </div>
