--- a/views/templates/book-show.html
+++ b/views/templates/book-show.html
@@ -10,14 +10,16 @@ delete button
     <div class="col-md-8 offset-md-2">
           <div class="book-list-item">
             <img ng-src="{{ bookShowCtrl.book.image }}"/>
-            <h2 class="inline-header">Book Title: <span>{{ bookShowCtrl.book.title }}</span></h2>
-            <h2 class="inline-header">Author: <span>{{ bookShowCtrl.book.author }}</span></h2>
-            <h4 class="inline-header">Release Date: <span>{{ bookShowCtrl.book.releaseDate }}</span></h4>
-            <button type="button" class="btn btn-warning">Edit</button>
-            <button type="button" class="btn btn-danger">Delete</button>
+            <h2 class="inline-header" ng-class"!editing">Book Title: <span>{{ bookShowCtrl.book.title }}</span><input type="text" ng-model="title" placeholder="{{ bookShowCtrl.book.title }}"</h2>
+            <h2 class="inline-header" ng-class"!editing">Author: <span>{{ bookShowCtrl.book.author }}</span><input type="text" ng-model="author" placeholder="{{ bookShowCtrl.book.author }}"</h2>
+            <h4 class="inline-header" ng-class="!editing">Release Date: <span>{{ bookShowCtrl.book.releaseDate }}</span><input type="text" ng-model="releaseDate" placeholder="{{ bookShowCtrl.book.releaseDate }}"</h4>
+            <button ng-click="changeClass(editing)" type="button" class="btn btn-warning">Edit</button>
+            <button ng-click="" type="button" class="btn btn-danger">Delete</button>
 
-<!-- <a href="#" ng-click="editForm=!editForm" class="btn btn-default">Edit <span class="glyphicon glyphicon-pencil"></span></a>&nbsp;
-<a href="#" ng-click="booksShowCtrl.deleteBook(booksShowCtrl.book)" class="btn btn-default">Delete <span class="glyphicon glyphicon-trash"></span></a> -->
+
+
+            <button type="button" ng-show="editing" class="btn btn-success">Save</button>
+
 
 
           </div>
