fixes edit book form

--- a/views/templates/book-show.html
+++ b/views/templates/book-show.html
@@ -10,9 +10,9 @@ delete button
     <div class="col-md-8 offset-md-2">
           <div class="book-list-item">
             <img ng-src="{{ bookShowCtrl.book.image }}"/>
-            <h2 class="inline-header">Book Title: <span>{{ bookShowCtrl.book.title }}</span><input type="text" ng-model="title"  ng-show="editing" placeholder="{{ bookShowCtrl.book.title }}"</h2>
-            <h2 class="inline-header">Author: <span>{{ bookShowCtrl.book.author }}</span><input type="text" ng-model="author" ng-show="editing" placeholder="{{ bookShowCtrl.book.author }}"</h2>
-            <h4 class="inline-header">Release Date: <span>{{ bookShowCtrl.book.releaseDate }}</span><input type="text" ng-model="releaseDate" ng-show="editing" placeholder="{{ bookShowCtrl.book.releaseDate }}"</h4>
+            <h2 class="inline-header">Book Title: <span>{{ bookShowCtrl.book.title }}</span><input type="text" class="form-control" ng-model="book.title"  ng-show="editing" placeholder="{{ bookShowCtrl.book.title }}"></h2>
+            <h2 class="inline-header">Author: <span>{{ bookShowCtrl.book.author }}</span><input type="text" class="form-control" ng-model="book.author" ng-show="editing" placeholder="{{ bookShowCtrl.book.author }}"></h2>
+            <h4 class="inline-header">Release Date: <span>{{ bookShowCtrl.book.releaseDate }}</span><input type="text" class="form-control" ng-model="book.releaseDate" ng-show="editing" placeholder="{{ bookShowCtrl.book.releaseDate }}"></h4>
           </div>
           <button ng-show="!editing" ng-click=" !editing = false " type="button" class="btn btn-warning">Edit</button>
           <button ng-show="!editing" ng-click="bookShowCtrl.book" type="button" class="btn btn-danger">Delete</button>
